Fixed alignment on about me paragraph.

--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ h2 {
     font-size: 20px;
   }
   .hannah-description {
-    text-align: center;
+    text-align: left;
     padding: 20px;
   }
   .hannah {
